# BICS_ABM

./: .gitignore  .gitmodules  01_load_data.R  ABM_diagram.drawio  Analysis 2-Copy1.ipynb  Analysis 2.ipynb  Analysis 3.ipynb  Analysis.ipynb  BICS_ABM.drawio  BICS_ABM.md  BICS_ABM.py  CMakeLists.txt  ML Analysis.ipynb  Makefile  Networkx.ipynb  Population.py  Population_c.pyx  Population_cy.c  Population_cy.pyx  Profile.prof  README.md  Scratch.ipynb  Untitled.ipynb  analysis.py  best_model.h5  configuration_mixing.py  create_pop.py  gen_sims_for_ml.py  household_degdist_vaccination.py  household_mixing_w_degree_dist.py  household_mixing_w_random.py  load_data.py  pop_cache.py  produce_dataset.py  program.prof  randgen.py  random_mixing.py  rnn_model.py  run_sims.py  setup.py  (+4 more)
.git.bfg-report/2022-09-12/13-23-53/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
.git.bfg-report/2022-09-12/13-27-19/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
.git.bfg-report/2022-09-12/13-27-19/protected-dirt/: 703ce191-HEAD.csv
POLYMOD/: 2008_Mossong_POLYMOD_contact_common.csv.REMOVED.git-id  2008_Mossong_POLYMOD_dictionary.xls  POLYMOD_source.rtf
R/: process_data.R
Unused/: Analysis 2.ipynb  Analysis 3.ipynb  Analysis.ipynb  Scratch.ipynb  Untitled.ipynb  data.Rmd  run_sims.py
cpp_version/: .create_pop.cpp.swp  .igraph_test.cpp.swp  BICS_ABM  BICS_ABM.cpp  BICS_ABM.h  BICS_ABM.py  CMakeLists.txt  Edge.cpp  Household.cpp  Household_tests  Makefile  Node.cpp  Node.h  Node_tests.cpp  Population.cpp  Population_tests  Population_tests.cpp  a.out  create_pop.cpp  data.cpp  decrement.cpp  default.profraw  defs.h  disease_status.cpp  distribute_vax.cpp  get_csv_row.cpp  history.cpp  igraph_test.cpp  main.cpp  make  matplotlibcpp.h  model_test  model_test.cpp  pop.csv  print_attributes.cpp  py_defs.cpp  py_extension.py  randstring.cpp  set_sick.cpp  stovf.cpp  (+2 more)
cpp_version/old_version/: Household_tests.cpp  Makefile  Node.cpp  Node_tests  Node_tests.cpp  Population_tests  Population_tests.cpp  defs.h
cpp_version/src/: BICS_ABM.cpp  BICS_ABM.h  create_pop.cpp  data.cpp  decrement.cpp  distribute_vax.cpp  get_csv_row.cpp  main.cpp  mixing.cpp  params.cpp  print_attributes.cpp  py_defs.cpp  randstring.cpp  set_sick.cpp  test.cpp  transmit.cpp
cpp_version/src/tests/: decrement_tests.cpp  pop_tests.cpp  test.cpp  tests_main.cpp
figs/: demog_plot.R
lucid/: cities_alters_wave0.rds  cities_alters_wave0_unweighted.rds  cities_wave0.rds  cities_wave0_unweighted.rds  df_all_waves.rds  df_alters_all_waves.rds  fb2015_contact_matrices_fbage_bootstrapped.rds  fb2015_contact_matrix_fbage.rds  national_alters_nonhh_wave1.rds  national_alters_nonhh_wave1_unweighted.rds  national_alters_nonhh_wave2.rds  national_alters_nonhh_wave2_unweighted.rds  national_alters_nonhh_wave3.rds  national_alters_nonhh_wave3_unweighted.rds  national_alters_nonhh_wave4.rds  national_alters_nonhh_wave4_unweighted.rds  national_alters_nonhh_wave5.rds  national_alters_nonhh_wave5_unweighted.rds  national_alters_wave0.rds  national_alters_wave0_unweighted.rds  national_alters_wave1.rds  national_alters_wave1_unweighted.rds  national_alters_wave2.rds  national_alters_wave2_unweighted.rds  national_alters_wave3.rds  national_alters_wave3_unweighted.rds  national_alters_wave4.rds  national_alters_wave4_unweighted.rds  national_alters_wave5.rds  national_alters_wave5_unweighted.rds  national_wave0.rds  national_wave0_unweighted.rds  national_wave1.rds  national_wave1_unweighted.rds  national_wave2.rds  national_wave2_unweighted.rds  national_wave3.rds  national_wave3_unweighted.rds  national_wave4.rds  national_wave4_unweighted.rds  (+21 more)
src/: BICS_ABM.cpp  BICS_ABM.h  create_pop.cpp  data.cpp  decrement.cpp  decrement2.cpp  demography.cpp  disease_status.cpp  distribute_vax.cpp  history.cpp  main.cpp  mixing.cpp  params.cpp  print_attributes.cpp  py_defs.cpp  sample_pop.h  set_sick.cpp  transmit.cpp  update.cpp
src/tests/: create_test_graphs.cpp  data_tests.cpp  decrement2_tests.cpp  decrement_tests.cpp  graph_diff.cpp  tests.h  tests_main.cpp  update_tests.cpp
unused/: 01_load_data.R  02_sim_pop.R  03_random_mixing.R  Edge.R  Edge.py  Node.R  Node.py  Population.py  df_all_waves.rds  df_alters_all_waves.rds  test_pop.py
unused/V1/: Population_cy.html  cprofile_cython.py  household_degdist_vaccination.py  household_mixing_w_degree_dist.py  produce_dataset.py  random_mixing.py  test_Households.py  test_Population.py  testanim.gif.REMOVED.git-id
unused/tests/: test_Population.py  tests_Node.py
